Bug 756846 - Increase timeout to 3 minutes for prefetch clearing. r=rstrong